# mcp-portal

./: .env.example  .gitignore  README.md  SECURITY.md  fastmcp.json  fastmcp.prod.json  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml
contracts/: tool-contracts.json
docs/: README.md  architecture.md  enterprise-roadmap.md  environment-variables.md
src/mcp_portal/: __init__.py  __main__.py  approvals.py  asgi.py  audit.py  auth.py  clients.py  config.py  contracts.py  credentials.py  debug_ui.py  egress.py  errors.py  execution.py  governance.py  middleware.py  observability.py  policy.py  redaction.py  remote.py  resilience.py  security.py  server.py  services.py  tasks.py  telemetry.py  tenancy.py  testing.py
src/mcp_portal/clients/: __init__.py  factory.py  mongodb.py  registry.py
src/mcp_portal/config/: __init__.py  constants.py  environment.py  models.py  settings.py
src/mcp_portal/namespaces/: __init__.py  health.py
src/mcp_portal/server/: __init__.py  __main__.py  cli.py  factory.py  runtime.py
tests/: test_cli.py  test_config.py  test_docstrings.py  test_egress.py  test_enterprise.py  test_execution_cells.py  test_governance.py  test_namespace_contracts.py  test_production.py  test_server.py  test_telemetry.py  test_tenancy.py
tests/clients/: test_default_factories.py  test_mongodb.py  test_registry.py
tests/config/: test_environment.py  test_settings.py
tests/server/: test_cli.py  test_factory.py  test_production.py  test_runtime.py
