[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-portal"
version = "0.1.0"
description = "A small, extensible FastMCP server scaffold."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0.0,<4",
    "python-dotenv>=1.0.1,<2",
]

[project.optional-dependencies]
dev = [
    "black==26.5.1",
    "pytest>=8.2,<9",
    "pytest-asyncio>=0.24,<2",
    "pytest-cov>=5,<8",
    "ruff>=0.8,<1",
]

[project.scripts]
mcp-portal = "mcp_portal.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=mcp_portal --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
branch = true
source = ["mcp_portal"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]
