[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-portal"
version = "0.1.0"
description = "A small, extensible FastMCP server scaffold."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.28.1,<2",
    "fastmcp[apps]>=3.0.0,<4",
    "python-dotenv>=1.0.1,<2",
    "pydantic>=2.11,<3",
    "sqlalchemy>=2.0.51,<3",
    "langchain>=1.3.2,<2",
    "langgraph>=1.2.2,<2",
    "opentelemetry-api>=1.30,<2",
]

[project.optional-dependencies]
oracle = [
    "sqlalchemy>=2.0.51,<3",
    "oracledb>=2.5,<5",
]
mongodb = [
    "langchain-mongodb>=0.11,<1",
]
ldap = [
    "ldap3>=2.9.1,<3",
]
kerberos = [
    "pyspnego[kerberos]>=0.12,<1",
]
enterprise-auth = [
    "ldap3>=2.9.1,<3",
    "pyspnego[kerberos]>=0.12,<1",
]
dev = [
    "black>=26.5.1",
    "pytest>=8.2,<10",
    "pytest-asyncio>=0.24,<2",
    "pytest-cov>=5,<8",
    "ruff>=0.8,<1",
]

[project.scripts]
mcp-portal = "mcp_portal.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=mcp_portal --cov-report=term --cov-fail-under=90"

[tool.coverage.run]
branch = true
source = ["mcp_portal"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]
